--- a/index.html
+++ b/index.html
@@ -17,3 +17,13 @@
 <!-- jumbotron--->
 <!--welcome section --->
 <!--three column section --->
+<!--Two column section-->
+<!--fixed background-->
+<!--emoji section-->
+<!--meet the team-->
+<!--cards-->
+<!--two column section-->
+<!--connect-->
+<!--footer-->
+</body>
+</html>
