created nav info

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 </head>
 <body>
 <!-- Navigation --->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<div class="container-fluid">
+  <a class="navbar-brand" href="#"><img src="images/logo.png">
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+  data-target="#navbarResponsive">
+  
+  </button>
+</div>
+</nav>
+
 <!--image slider --->
 <!-- jumbotron--->
 <!--welcome section --->
