created the team

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Complete Bootstrap 4 Website Layout</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquety/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"</script>
@@ -75,17 +76,120 @@
 <div class="row jumbotron">
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
       <p class="lead">An interpreter plays the role of connecting communication between individuals
-        who don't speak the same language, we can provide you the best service and eliminate borders in communication</p>
+        who don't speak the same language, we can provide you the best service and eliminate borders in your communication</p>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+        <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Make an appoiment</button></a>
     </div>
 </div>
 </div>
 <!--welcome section --->
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Providing interpreting services in multple areas</h1>
+    </div>
+    <hr>
+    <div class="col-12">
+      <p class="lead">We work in a variety of settings, including schools, hospitals,
+        courtrooms, detention facilities, and conference centers</p>
+    </div>
+</div>
+</div>
 <!--three column section --->
+<div class="container-fluid padding">
+<div class="row text-center padding">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="bi bi-hospital"></i>
+      <h3>Medical Interpreter</h3>
+      <p>We providen interpretation for healthcare institutions</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+        <i class="bi bi-book"></i>
+      <h3>General Interpreter</h3>
+      <p>We providen interpretation for any area requierd with accessability</p>
+    </div>
+    <div class="col-xs-12 col-md-4">
+      <i class="bi bi-briefcase"></i>
+      <h3>Court Interpreter</h3>
+      <p>We providen interpretation for law institutions</p>
+    </div>
+</div>
+<hr class="my-4">
+</div>
 <!--Two column section-->
+<div class="container-fluid padding">
+<div class="row padding">
+    <div class="col-lg-6">
+        <h2>Interpretation Service</h2>
+        <p>Our interpreting goal is for people to experience the target language as
+           seamlessly as if it were the source language.</p>
+        <p>Highly proficient in both English and the other language</p>
+        <p>Our medical interpreting service to patient visit is focused on the patient themselves.
+           Our target regardless the area, is that patients shouldn’t be treated differently just because they speak a different language.
+           When seeing a person with limited English proficiency, we ensure to speak directly to them, and help them connect.</p>
+        <br>
+        <a href="#" class="btn btn-primary">Learn More</a>
+    </div>
+    <div class="col-lg-6">
+      <img src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-jopwell-2422288.jpg" alt="" style="width:100%">
+    </div>
+</div>
+</div>
+<hr class="my-4">
 <!--fixed background-->
-<!--emoji section-->
+<figure>
+  <div class="fixed-wrap">
+    <div id="fixed">
+    </div>
+  </div>
+</figure>
 <!--meet the team-->
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+  <div class="col-12">
+      <h1 class="display-4">Meet the team</h1>
+  </div>
+</div>
+</div>
 <!--cards-->
+<div class="container-fluid padding">
+<div class="row padding">
+  <div class="col-md-4">
+      <div class="card">
+        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-christina-morillo-1181686.jpg" alt="pexel christina">
+        <div class="card-body">
+          <h4 class="card-title">Christina Gamez</h4>
+          <p>Christina is one of most talented interpreter,
+          with almost 15 years of expirience, always with the best service and accessability</p>
+          <a href="#" class="btn btn-outline-secondary">See Profile</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-md-4">
+      <div class="card">
+        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-christina-morillo-1181695.jpg" alt="pexel Anna">
+        <div class="card-body">
+          <h4 class="card-title">Anna Camacho</h4>
+          <p>Anna is great interpreter,
+          with almost a degree in specialized in medical interpreting with a 5 year expirincei all the interpreting areas</p>
+          <a href="#" class="btn btn-outline-secondary">See Profile</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-md-4">
+      <div class="card">
+        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-italo-melo-2379004.jpg" alt="pexel adrian">
+        <div class="card-body">
+          <h4 class="card-title">Adrian Rovalsk</h4>
+          <p>Adrian is an amazing Russion, English, Spanish, Greek interpreter
+          with 2 year expirince and specialized in more languajes including the following mentioned</p>
+          <a href="#" class="btn btn-outline-secondary">See Profile</a>
+        </div>
+      </div>
+  </div>
+</div>
+</div>
 <!--two column section-->
 <!--connect-->
 <!--footer-->
