--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
 <title>Complete Bootstrap 4 Website Layout</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquety/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="https://use.fontawesome.com/release/v5.0.8/js/all.js"></script>
-<link href="style.css" rel="stylesheet">
+<link href="stylesheet.css" rel="stylesheet">
 </head>
 <body>
-<!-- Navigation --->
+<!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="images/logo.png" style="width:150px"></a>
+  <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo" style="width:150px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
   data-target="#navbarResponsive">
   <span class="navbar-toggler-icon"></span>
@@ -40,10 +36,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Connect</a>
         </li>
+      </ul>
+  </div>
 </div>
 </nav>
-
-<!--image slider --->
+<!--image slider -->
 <div id="slides" class="carousel slide" data-ride="carousel">
   <ul class="carousel-indicators">
 <!--Images that slide 1,2 and 3-->
@@ -54,7 +51,7 @@
 <!--the images inside the carousel-->
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-august-de-richelieu-4427553.jpg" alt="pexel law team" style="width:100%">
+    <img src="images/pexels-august-de-richelieu-4427553.jpg" alt="pexel law team" style="width:100%">
 <!--content in the caroulse-->
     <div class="carousel-caption">
       <h1 class="display-2">Court Interpreter</h1>
@@ -64,28 +61,28 @@
     </div>
   </div>
   <div class="carousel-item">
-    <img src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-kampus-production-8636601.jpg" alt="pexel medical team">
+    <img src="images/pexels-kampus-production-8636601.jpg" alt="pexel medical team">
   </div>
   <div class="carousel-item">
-    <img src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-mart-production-7088520.jpg" alt="pexel interpreter">
+    <img src="images/pexels-mart-production-7088520.jpg" alt="pexel interpreter">
   </div>
 </div><!--carouselinner div-->
 </div><!--the carousel slide div-->
-<!-- jumbotron--->
-<div class="container-fluid">
+<!-- jumbotron-->
+<div class="Jumbo">
 <div class="row jumbotron">
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
       <p class="lead">An interpreter plays the role of connecting communication between individuals
         who don't speak the same language, we can provide you the best service and eliminate borders in your communication</p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-        <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Make an appoiment</button></a>
+        <button type="button" class="btn btn-outline-secondary btn-lg">Make an appoiment</button>
     </div>
 </div>
 </div>
-<!--welcome section --->
-<div class="container-fluid padding">
-<div class="row welcome text-center">
+<!--welcome section -->
+<div class="section">
+<div class="section-row">
     <div class="col-12">
       <h1 class="display-4">Providing interpreting services in multple areas</h1>
     </div>
@@ -96,29 +93,29 @@
     </div>
 </div>
 </div>
-<!--three column section --->
-<div class="container-fluid padding">
+<!--three column section -->
+<div class="col-three">
 <div class="row text-center padding">
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-3">
       <i class="bi bi-hospital"></i>
       <h3>Medical Interpreter</h3>
       <p>We providen interpretation for healthcare institutions</p>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-3">
         <i class="bi bi-book"></i>
       <h3>General Interpreter</h3>
       <p>We providen interpretation for any area requierd with accessability</p>
     </div>
-    <div class="col-xs-12 col-md-4">
+    <div class="col-3">
       <i class="bi bi-briefcase"></i>
       <h3>Court Interpreter</h3>
       <p>We providen interpretation for law institutions</p>
     </div>
 </div>
-<hr class="my-4">
 </div>
+<hr>
 <!--Two column section-->
-<div class="container-fluid padding">
+<div class="col-Two">
 <div class="row padding">
     <div class="col-lg-6">
         <h2>Interpretation Service</h2>
@@ -132,20 +129,12 @@
         <a href="#" class="btn btn-primary">Learn More</a>
     </div>
     <div class="col-lg-6">
-      <img src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-jopwell-2422288.jpg" alt="" style="width:100%">
+      <img src="images/pexels-jopwell-2422288.jpg" alt="" style="width:100%">
     </div>
 </div>
 </div>
-<hr class="my-4">
-<!--fixed background-->
-<figure>
-  <div class="fixed-wrap">
-    <div id="fixed">
-    </div>
-  </div>
-</figure>
 <!--meet the team-->
-<div class="container-fluid padding">
+<div class="meeatTeam-container">
 <div class="row welcome text-center">
   <div class="col-12">
       <h1 class="display-4">Meet the team</h1>
@@ -153,11 +142,11 @@
 </div>
 </div>
 <!--cards-->
-<div class="container-fluid padding">
+<div class="card-container">
 <div class="row padding">
   <div class="col-md-4">
       <div class="card">
-        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-christina-morillo-1181686.jpg" alt="pexel christina">
+        <img class="card-imd-top" src="images/pexels-christina-morillo-1181686.jpg" alt="pexel christina">
         <div class="card-body">
           <h4 class="card-title">Christina Gamez</h4>
           <p>Christina is one of most talented interpreter,
@@ -168,7 +157,7 @@
   </div>
   <div class="col-md-4">
       <div class="card">
-        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-christina-morillo-1181695.jpg" alt="pexel Anna">
+        <img class="card-imd-top" src="images/pexels-christina-morillo-1181695.jpg" alt="pexel Anna">
         <div class="card-body">
           <h4 class="card-title">Anna Camacho</h4>
           <p>Anna is great interpreter,
@@ -179,19 +168,40 @@
   </div>
   <div class="col-md-4">
       <div class="card">
-        <img class="card-imd-top" src="C:\Users\yanei\OneDrive\Documentos\Web Design and development\Project02\images\pexels-italo-melo-2379004.jpg" alt="pexel adrian">
+        <img class="card-imd-top" src="images/pexels-italo-melo-2379004.jpg" alt="pexel adrian">
         <div class="card-body">
           <h4 class="card-title">Adrian Rovalsk</h4>
           <p>Adrian is an amazing Russion, English, Spanish, Greek interpreter
-          with 2 year expirince and specialized in more languajes including the following mentioned</p>
+          with 2 year expirince and specialized in more languajes.</p>
           <a href="#" class="btn btn-outline-secondary">See Profile</a>
         </div>
       </div>
   </div>
 </div>
 </div>
-<!--two column section-->
-<!--connect-->
 <!--footer-->
+<div class="Footer">
+  <div class="row text-center">
+    <div class="col-md">
+      <h3>Office:</h3>
+      <p>780-249-1480</p>
+      <p>Inter@email.com</p>
+      <p>100 N street Pine</p>
+      <p>Calgary NY 15783</p>
+    </div>
+    <div class="col-md">
+      <h3>Office Hourse :</h3>
+      <p>Monday: 9:00 a.m - 5:00 p.m</p>
+      <p>Friday: 9:00 a.m - 4:00 p.m</p>
+      <p>Saturday: 9:00 a.m - 2:00 p.m</p>
+    </div>
+    <div class="col-md">
+      <h3>Notice</h3>
+      <p>We would like to informe you that are closed on holidays
+        and sundays.</p>
+      <p>Please try to reach us on working ofice hours. Thank you!</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
